--- a/mystyle.css
+++ b/mystyle.css
@@ -59,7 +59,7 @@ table {
 /* BASIC STYLES - START */
  
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: #1c1c1c;
 }
  
@@ -79,11 +79,11 @@ a {
 }
 
 h1 {
- 
+
 }
  
 h2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 100%;
   line-height: 1.5em;
   margin: 0 0 0.5em;
@@ -127,10 +127,10 @@ h1.logo a {
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 20px;
-    line-height: 25px;
+    font-size: 22px;
+    line-height: 22px;
     float: left;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.15em;
     padding: ;
 }
  
@@ -139,7 +139,7 @@ a.to_nav {
     color: #d8d8d8;
     background: #4e4e4e;
     text-decoration: none;
-    padding: 0px 2px 0px;
+    padding: 2px 5px 2px 5px;
     font-size: 75%;
     font-weight: bold;
     line-height: 25px;
@@ -164,7 +164,7 @@ a.to_nav:focus {
     zoom: 1.0;
 }
 
-.body-content {margin: 50px 40px 50px 40px; font-family: 'Roboto', sans-serif; text-decoration: none; font-size: 100%; line-height: 150%;}
+.body-content {margin: 50px 40px 50px 40px; font-family: 'Raleway', sans-serif; text-decoration: none; font-size: 100%; line-height: 125%;}
 .body-content a:link {
 	font-weight: bold;
     color: black;
@@ -230,7 +230,7 @@ a.to_nav:focus {
 }
 
 footer {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-style: italic;
   text-align: center;
   font-size: 15px;
