--- a/mystyle.css
+++ b/mystyle.css
@@ -384,6 +384,13 @@ h1.logo a.to_nav:focus {
     zoom: 1.0;
 }
 
+img
+{
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
 .body-content  {
   color: black;
   /*background: #fafafa;*/
